--- a/Gen4/prinplup.html
+++ b/Gen4/prinplup.html
@@ -5,94 +5,87 @@
 
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/style-popup.css">
     <script src="../js/script.js"></script>
   </head>
 
   <marquee dir="left"
     ><b><i>Website under development</i></b></marquee
   >
-
-  <div style="text-align: center;">
-    <img
-      src="../img/pokeball.png"
-      width="150"
-      height="150"
-      class="pokeball"
-    />
-    <img
-      src="../img/LOGO.png"
-      width="=300;"
-      height="150;"
-      class="logo"
-    />
-</div>
-  
-  <style>
+  <body class="pop-up">
+    <div id="pop-up">
+      <div class="popup-cont">
+        
+        <style>
     .bg {
       background-color: rgb(92, 168, 255);
       text-align: center;
     }
     </style>
 
-  <div class="bg">
-    <h2>Prinplup</h2>
-    <img
-      src="../img/prinplup.png"
-      alt="Prinplup"
-      width="300"
-      height="250"
-    />
-  </div>
-  <div class="type">
-    <ul>
-      <h4>Types</h4>
-      <li class="water">Water</li>
-    </ul>
-  </div>
+<div class="bg">
+  <h2>Prinplup</h2>
+  <img
+  src="../img/prinplup.png"
+  alt="Prinplup"
+  width="300"
+  height="250"
+  />
+</div>
+<div class="type">
+  <ul>
+    <h4>Types</h4>
+    <li class="water">Water</li>
+  </ul>
+</div>
 
-  <table width="100%" border="1">
-    <thead style="background-color: rgb(92, 168, 255);">
-      <th>HP</th>
-      <th>Attack</th>
-      <th>Defence</th>
-      <th>Speed</th>
-      <th>Sp Atk</th>
-      <th>Sp Def</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>64</td>
-        <td>66</td>
-        <td>68</td>
-        <td>50</td>
-        <td>81</td>
-        <td>76</td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <table width="100%" border="1">
-    <thead>
-      <th>PreEvo</th>
-      <th>NextEvo</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-          <td>
-            <a href="piplup.html">Piplup<br /><img
-              src="../img/piplup.png"
-              height="75"
-              width="80"
-            />
-          </td>
+<table width="100%" border="1">
+  <thead style="background-color: rgb(92, 168, 255);">
+    <th>HP</th>
+    <th>Attack</th>
+    <th>Defence</th>
+    <th>Speed</th>
+    <th>Sp Atk</th>
+    <th>Sp Def</th>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td>64</td>
+      <td>66</td>
+      <td>68</td>
+      <td>50</td>
+      <td>81</td>
+      <td>76</td>
+    </tr>
+  </tbody>
+</table>
+<br />
+<table width="100%" border="1">
+  <thead>
+    <th>PreEvo</th>
+    <th>NextEvo</th>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td>
+        <a href="piplup.html">Piplup<br /><img
+          src="../img/piplup.png"
+          height="75"
+          width="80"
+          />
+        </td>
         <td><a href="empoleon.html">Empoleon<br /><img
-            src="../img/empoleon.png"
-            height="75"
-            width="80"
+          src="../img/empoleon.png"
+          height="75"
+          width="80"
           /></td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
-</html>
+        </tr>
+      </tbody>
+    </table>
+    <br />
+    <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
+  </div>
+  </div>
+  </body>
+    </html>
+    
