--- a/Gen4/torterra.html
+++ b/Gen4/torterra.html
@@ -4,82 +4,88 @@
   </title>
 
   <head>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="../css/style-popup.css">
   </head>
 
   <marquee dir="left"
     ><b><i>Website under development</i></b></marquee
   >
 
-  <div style="text-align: center;">
-    <img src="../img/pokeball.png" width="150" height="150" class="pokeball" />
-    <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
-  </div>
+  <body class="pop-up">
+    <div id="pop-up">
+      <div class="popup-cont">
+        <style>
+          .bg {
+            background-image: linear-gradient(
+              90deg,
+              rgb(55, 230, 55) 50%,
+              rgb(246, 178, 67) 50%
+            );
+            text-align: center;
+          }
+        </style>
 
-  <style>
-    .bg {
-      background-image: linear-gradient(
-        90deg,
-        rgb(40, 218, 40) 50%,
-        rgba(192, 119, 11, 0.897) 50%
-      );
-      text-align: center;
-    }
-  </style>
-
-  <div class="bg">
-    <h2>Torterra</h2>
-    <img src="../img/torterra.png" alt="Torterra" width="300" height="250" />
-  </div>
-
-  <div>
-    <ul>
-      <h4>Types</h4>
-      <li class="grass">Grass</li>
-      <li class="ground">Ground</li>
-    </ul>
-  </div>
-
-  <table width="100%" border="1">
-    <thead style="background-color: rgb(40, 218, 40);">
-      <th>HP</th>
-      <th>Attack</th>
-      <th>Defence</th>
-      <th>Speed</th>
-      <th>Sp Atk</th>
-      <th>Sp Def</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>95</td>
-        <td>109</td>
-        <td>105</td>
-        <td>56</td>
-        <td>75</td>
-        <td>85</td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <table width="100%" border="1">
-    <thead>
-      <th>PreEvo</th>
-      <th>NextEvo</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>
-          <a href="grotle.html">Grottle</a><br /><img
-            src="../img/grotle.png"
-            width="80"
-            height="75"
+        <div class="bg">
+          <h2>Torterra</h2>
+          <img
+            src="../img/torterra.png"
+            alt="Torterra"
+            width="300"
+            height="250"
           />
-        </td>
-        <td>NONE</td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
+        </div>
+        <div class="type">
+          <ul>
+            <h4>Types</h4>
+            <li class="grass">Grass</li>
+            <li class="ground">Ground</li>
+          </ul>
+        </div>
+
+        <table width="100%" border="1">
+          <thead style="background-color: rgb(55, 230, 55);">
+            <th>HP</th>
+            <th>Attack</th>
+            <th>Defence</th>
+            <th>Speed</th>
+            <th>Sp Atk</th>
+            <th>Sp Def</th>
+          </thead>
+          <tbody align="center">
+            <tr>
+              <td>64</td>
+              <td>78</td>
+              <td>52</td>
+              <td>81</td>
+              <td>78</td>
+              <td>52</td>
+            </tr>
+          </tbody>
+        </table>
+        <br />
+        <table width="100%" border="1">
+          <thead>
+            <th>PreEvo</th>
+            <th>NextEvo</th>
+          </thead>
+          <tbody align="center">
+            <tr>
+              <td>
+                <a href="grotle.html">Grotle</a><br /><img
+                  src="../img/grotle.png"
+                  width="80"
+                  height="75"
+                />
+              </td>
+              <td>NONE</td>
+            </tr>
+          </tbody>
+        </table>
+        <br />
+        <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
+      </div>
+    </div>
+  </body>
 </html>
