--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <div class="home-container">
       <div class="box1">
         <div class="navbar">
-          <a class="active" href="#home">Home</a>
+          <a class="active" href="#home">Home
+            <i class="fa fa-home"></i>
+          </a>
           <div class="dropdown">
             <button class="dropbtn">
               Generations
