--- a/Gen3/swarmpert.html
+++ b/Gen3/swarmpert.html
@@ -5,6 +5,7 @@
 
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/style-popup.css">
     <script src="../js/script.js"></script>
   </head>
 
@@ -12,76 +13,82 @@
     ><b><i>Website under development</i></b></marquee
   >
 
-  <div style="text-align: center;">
-    <img src="../img/pokeball.png" width="150" height="150" class="pokeball" />
-    <img src="../img/LOGO.png" width="=300;" height="150;" class="logo" />
-  </div>
+  <body class="pop-up">
+    <div id="pop-up">
+      <div class="popup-cont">
+        <style>
+          .bg {
+            background-image: linear-gradient(
+              90deg,
+              rgb(92, 168, 255) 50%,
+              rgb(246, 178, 67) 50%
+            );
+            text-align: center;
+          }
+        </style>
 
-  <style>
-    .bg {
-      background-image: linear-gradient(
-        90deg,
-        rgb(92, 168, 255) 50%,
-        rgb(246, 178, 67) 50%
-      );
-      text-align: center;
-    }
-  </style>
-
-  <div class="bg">
-    <h2>Swampert</h2>
-    <img src="../img/swarmpert.png" alt="Swarmpert" width="300" height="250" />
-  </div>
-  <div class="type">
-    <ul>
-      <h4>Types</h4>
-      <li class="water">Water</li>
-      <li class="ground">Ground</li>
-    </ul>
-  </div>
-
-  <table width="100%" border="1">
-    <thead style="background-color: rgb(92, 168, 255);">
-      <th>HP</th>
-      <th>Attack</th>
-      <th>Defence</th>
-      <th>Speed</th>
-      <th>Sp Atk</th>
-      <th>Sp Def</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>64</td>
-        <td>78</td>
-        <td>52</td>
-        <td>81</td>
-        <td>78</td>
-        <td>52</td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <table width="100%" border="1">
-    <thead>
-      <th>PreEvo</th>
-      <th>NextEvo</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>
-          <a href="marshtomp.html">Marshtomp[NO CONTENT]</a><br /><img
-            src="../img/marshtomp.png"
-            width="80"
-            height="75"
-            alt="Marshtomp"
+        <div class="bg">
+          <h2>Swampert</h2>
+          <img
+            src="../img/swarmpert.png"
+            alt="Swarmpert"
+            width="300"
+            height="250"
           />
-        </td>
-        <td>
-          NONE
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <button id="Gen3" onclick="changeTabs(this.id,'r')">GEN3</button>
+        </div>
+        <div class="type">
+          <ul>
+            <h4>Types</h4>
+            <li class="water">Water</li>
+            <li class="ground">Ground</li>
+          </ul>
+        </div>
+
+        <table width="100%" border="1">
+          <thead style="background-color: rgb(92, 168, 255);">
+            <th>HP</th>
+            <th>Attack</th>
+            <th>Defence</th>
+            <th>Speed</th>
+            <th>Sp Atk</th>
+            <th>Sp Def</th>
+          </thead>
+          <tbody align="center">
+            <tr>
+              <td>64</td>
+              <td>78</td>
+              <td>52</td>
+              <td>81</td>
+              <td>78</td>
+              <td>52</td>
+            </tr>
+          </tbody>
+        </table>
+        <br />
+        <table width="100%" border="1">
+          <thead>
+            <th>PreEvo</th>
+            <th>NextEvo</th>
+          </thead>
+          <tbody align="center">
+            <tr>
+              <td>
+                <a href="marshtomp.html">Marshtomp[NO CONTENT]</a><br /><img
+                  src="../img/marshtomp.png"
+                  width="80"
+                  height="75"
+                  alt="Marshtomp"
+                />
+              </td>
+              <td>
+                NONE
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <br />
+        <button id="Gen3" onclick="changeTabs(this.id,'r')">GEN3</button>
+      </div>
+    </div>
+  </body>
 </html>
