--- a/Gen4/piplup.html
+++ b/Gen4/piplup.html
@@ -5,84 +5,73 @@
   <head>
       <link rel="stylesheet" href="../css/styles.css" />
       <script src="../js/script.js"></script>
+      <link rel="stylesheet" href="../css/style-popup.css">
     </head>
 
     <marquee dir="left"
     ><b><i>Website under development</i></b></marquee
   >
 
-   <div style="text-align: center;">
-        <img
-          src="../img/pokeball.png"
-          width="150"
-          height="150"
-          class="pokeball"
-        />
-        <img
-          src="../img/LOGO.png"
-          width="=300;"
-          height="150;"
-          class="logo"
-        />
-   </div>
- 
-  <style>
-    .bg {
-      background-color: rgb(92, 168, 255);
-      text-align: center;
-    }
-    </style>
+  <body class="pop-up">
+    <div id="pop-up">
+      <div class="popup-cont">
+        <style>
+          .bg {
+            background-color: rgb(92, 168, 255);
+            text-align: center;
+          }
+        </style>
 
-  <div class="bg">
-    <h2>Piplup</h2>
-    <img
-      src="../img/piplup.png"
-      alt="Piplup"
-      width="300"
-      height="250"
-    />
-  </div>
-  <div class="type">
-    <ul>
-      <h4>Types</h4>
-      <li class="water">Water</li>
-    </ul>
-  </div>
+<div class="bg">
+  <h2>Piplup</h2>
+  <img
+  src="../img/piplup.png"
+  alt="Piplup"
+  width="300"
+  height="250"
+  />
+</div>
+<div class="type">
+  <ul>
+    <h4>Types</h4>
+    <li class="water">Water</li>
+  </ul>
+</div>
 
-  <table width="100%" border="1">
-    <thead style="background-color: rgb(92, 168, 255);">
-      <th>HP</th>
-      <th>Attack</th>
-      <th>Defence</th>
-      <th>Speed</th>
-      <th>Sp Atk</th>
-      <th>Sp Def</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>53</td>
-        <td>51</td>
-        <td>53</td>
-        <td>40</td>
-        <td>61</td>
-        <td>56</td>
-      </tr>
-    </tbody>
-  </table>
-  <br />
-  <table width="100%" border="1">
-    <thead>
-      <th>PreEvo</th>
-      <th>NextEvo</th>
-    </thead>
-    <tbody align="center">
-      <tr>
-        <td>NONE</td>
-        <td>
-          <a href="prinplup.html">Prinplup<br /><img
-            src="../img/prinplup.png"
-            height="75"
-            width="80"
+<table width="100%" border="1">
+  <thead style="background-color: rgb(92, 168, 255);">
+    <th>HP</th>
+    <th>Attack</th>
+    <th>Defence</th>
+    <th>Speed</th>
+    <th>Sp Atk</th>
+    <th>Sp Def</th>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td>53</td>
+      <td>51</td>
+      <td>53</td>
+      <td>40</td>
+      <td>61</td>
+      <td>56</td>
+    </tr>
+  </tbody>
+</table>
+<br />
+<table width="100%" border="1">
+  <thead>
+    <th>PreEvo</th>
+    <th>NextEvo</th>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td>NONE</td>
+      <td>
+        <a href="prinplup.html">Prinplup<br /><img
+          src="../img/prinplup.png"
+          height="75"
+          width="80"
           />
         </td>
       </tr>
@@ -90,4 +79,7 @@
   </table>
   <br />
   <button id="Gen4" onclick="changeTabs(this.id,'r')">GEN4</button>
+</div>
+</div>
+</body>
 </html>
