--- a/Gen6/gen6.html
+++ b/Gen6/gen6.html
@@ -30,7 +30,7 @@
     <div class="grid-container">
       <div class="item1">
         <div class="navbar">
-          <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home</a>
+          <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home<i class="fa fa-home"></i></a>
           <div class="dropdown">
             <button class="dropbtn">
               Generations
