--- a/Gen5/oshawott.html
+++ b/Gen5/oshawott.html
@@ -5,7 +5,7 @@
 
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/style-popup.css">
+    <link rel="stylesheet" href="../css/style-popup.css" />
     <script src="../js/script.js"></script>
   </head>
 
@@ -16,13 +16,6 @@
   <body class="pop-up">
     <div id="pop-up">
       <div class="popup-cont">
-        <style>
-          .bg {
-            background-color: rgb(92, 168, 255);
-            text-align: center;
-          }
-        </style>
-
         <div class="bg">
           <h2>Oshawott</h2>
           <img
