--- a/Gen1/charizard.html
+++ b/Gen1/charizard.html
@@ -4,7 +4,7 @@
   </title>
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/style-popup.css">
+    <link rel="stylesheet" href="../css/style-popup.css" />
     <script src="../js/script.js"></script>
   </head>
 
@@ -14,17 +14,6 @@
   <body class="pop-up">
     <div id="pop-up">
       <div class="popup-cont">
-        <style>
-          .bg {
-            background-image: linear-gradient(
-              90deg,
-              rgb(250, 137, 9) 50%,
-              rgba(73, 39, 185, 0.733) 50%
-            );
-            text-align: center;
-          }
-        </style>
-
         <div class="bg">
           <h2>Charizard</h2>
           <img
