--- a/Gen4/torterra.html
+++ b/Gen4/torterra.html
@@ -6,7 +6,7 @@
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/script.js"></script>
-    <link rel="stylesheet" href="../css/style-popup.css">
+    <link rel="stylesheet" href="../css/style-popup.css" />
   </head>
 
   <marquee dir="left"
@@ -16,17 +16,6 @@
   <body class="pop-up">
     <div id="pop-up">
       <div class="popup-cont">
-        <style>
-          .bg {
-            background-image: linear-gradient(
-              90deg,
-              rgb(55, 230, 55) 50%,
-              rgb(246, 178, 67) 50%
-            );
-            text-align: center;
-          }
-        </style>
-
         <div class="bg">
           <h2>Torterra</h2>
           <img
