--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="box2">
         <h3>The World of Pokemon</h3>
         <p style="text-align: justify;">
-          Pokémon also known as Pocket Monsters[b] in Japan, is a Japanese media
+          Pokémon also known as Pocket Monsters in Japan, is a Japanese media
           franchise managed by the Pokémon Company, a company founded and with
           shares divided between Nintendo, Game Freak, and Creatures. The
           franchise copyright and Japanese trademark is shared by all three
