--- a/Gen2/gen2.html
+++ b/Gen2/gen2.html
@@ -30,10 +30,12 @@
     <div class="grid-container">
       <div class="item1">
         <div class="navbar">
-          <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home<i class="fa fa-home"></i></a>
+          <a href="#home" id="Home" onclick="changeTabs(this.id,'g')"
+            >Home<i class="fa fa-home"></i
+          ></a>
           <div class="dropdown">
             <button class="dropbtn">
-              Generations
+              Pokedex
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -46,6 +48,7 @@
               <a id="Gen7" onclick="changeTabs(this.id,'g')" href="#">Gen7</a>
             </div>
           </div>
+          <a href="../games/games.html">Games<i class="fa fa-gamepad"></i></a>
         </div>
       </div>
       <div class="item2"><h2>2nd Generation</h2></div>
