--- a/Gen3/gen3.html
+++ b/Gen3/gen3.html
@@ -33,7 +33,7 @@
           <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home<i class="fa fa-home"></i></a>
           <div class="dropdown">
             <button class="dropbtn">
-              Generations
+              Pokedex
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -46,6 +46,7 @@
               <a id="Gen7" onclick="changeTabs(this.id,'g')" href="#">Gen7</a>
             </div>
           </div>
+          <a href="../games/games.html">Games<i class="fa fa-gamepad"></i></a>
         </div>
       </div>
       <div class="item2">
