--- a/Gen7/gen7.html
+++ b/Gen7/gen7.html
@@ -35,7 +35,7 @@
           ></a>
           <div class="dropdown">
             <button class="dropbtn">
-              Generations
+              Pokedex
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -48,6 +48,7 @@
               <a id="Gen7" class="active" href="#">Gen7</a>
             </div>
           </div>
+          <a href="../games/games.html">Games<i class="fa fa-gamepad"></i></a>
         </div>
       </div>
       <div class="item2">
