--- a/index.html
+++ b/index.html
@@ -15,20 +15,13 @@
   >
 
   <title>
-    Pokedex
+    Pokemon
   </title>
 
   <div style="text-align: center;">
     <img src="img/pokeball.png" width="150" height="150" class="pokeball" />
     <img src="img/LOGO.png" width="=300;" height="150;" class="logo" />
   </div>
-
-  <h1
-    style="text-align: center; font-family: 'Times New Roman', Times, serif;"
-    class="type"
-  >
-    POKEDEX
-  </h1>
 
   <body>
     <div class="home-container">
@@ -40,7 +33,7 @@
           </a>
           <div class="dropdown">
             <button class="dropbtn">
-              Generations
+              Pokedex
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
@@ -53,6 +46,7 @@
               <a id="Gen7" onclick="changeTabs(this.id,'h')" href="#">Gen7</a>
             </div>
           </div>
+          <a href="games/games.html">Games<i class="fa fa-gamepad"></i></a>
         </div>
       </div>
       <div class="box2">
@@ -92,6 +86,7 @@
         </div>
       </div>
     </div>
+    
     <script>
       var i = 0;
       var images = [];
