Fixed image not loading in home page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           href="https://www.amazon.in/s?k=pokemon+merchandise&ref=nb_sb_noss"
           target="_blank"
         >
-          <img name="slide" style="width: 400px; height: 250px;" />
+          <img src="img/merch.jpeg" data-name="slide" style="width: 400px; height: 250px;" />
         </a>
         <div class="text" style="text-align: center;">
           <a
