--- a/Gen1/charmeleon.html
+++ b/Gen1/charmeleon.html
@@ -6,6 +6,7 @@
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/style-popup.css">
+    <link rel='shortcut icon' type="image/png" href="img/pokeball2.PNG">
     <script src="../js/script.js"></script>
   </head>
 
