--- a/Gen5/gen5.html
+++ b/Gen5/gen5.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/style_grid.css" />
-    <link rel='shortcut icon' type="image/png" href="img/pokeball2.PNG">
+    <link rel='shortcut icon' type="image/png" href="../img/pokeball2.PNG">
     <script src="../js/script.js"></script>
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
