--- a/games/games.html
+++ b/games/games.html
@@ -9,7 +9,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <link rel='shortcut icon' type="image/png" href="img/pokeball2.PNG">
+    <link rel='shortcut icon' type="image/png" href="../img/pokeball2.PNG">
   </head>
   <marquee dir="left" class="type"
     ><b><i>Website under development</i></b></marquee
