Template Testing Succesfull

--- a/Gen1/Charmander.html
+++ b/Gen1/Charmander.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    NAME
+    Charmander
   </title>
 
   <head>
@@ -22,13 +22,13 @@
     <div id="pop-up">
       <div class="popup-cont">
         <div class="bg">
-          <h2>NAME</h2>
-          <img src="../img/NAME_L.png" alt="NAME" width="300" height="250" />
+          <h2>Charmander</h2>
+          <img src="../img/charmander.png" alt="Charmander" width="300" height="250" />
         </div>
         <div class="type">
           <ul>
             <h4>Types</h4>
-            <li class="TYPE_L">TYPE</li>
+            <li class="fire">Fire</li>
           </ul>
         </div>
 
@@ -44,13 +44,13 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>TOTAL</td>
-              <td>hp</td>
-              <td>ATTACK</td>
-              <td>DEFENCE</td>
-              <td>SPEED</td>
-              <td>SPATK</td>
-              <td>SPDEF</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
             </tr>
           </tbody>
         </table>
@@ -74,7 +74,7 @@
           </tbody>
         </table> -->
         <br />
-        <button id="GEN" onclick="changeTabs(this.id,'r')">GEN</button>
+        <button id="Gen1" onclick="changeTabs(this.id,'r')">Gen1</button>
       </div>
       >
     </div>
