Evolution need to be added

--- a/Gen1/Charmander.html
+++ b/Gen1/Charmander.html
@@ -28,7 +28,8 @@
         <div class="type">
           <ul>
             <h4>Types</h4>
-            <li class="fire">Fire</li>
+            <li class="fire">fire</li>
+            
           </ul>
         </div>
 
