--- a/template.html
+++ b/template.html
@@ -28,12 +28,13 @@
         <div class="type">
           <ul>
             <h4>Types</h4>
-            <li class="TYPE_L">TYPE</li>
+            <li class="TYPE1_L">TYPE1</li>
+            <li class="TYPE2_L">TYPE2</li>
           </ul>
         </div>
 
         <table width="100%" border="1">
-          <thead style="background-color: rgb(250, 137, 9);">
+          <thead style="background-color: COLOR;">
             <th>Total</th>
             <th>HP</th>
             <th>Attack</th>
