html testing succsefull

--- a/Gen1/Bulbasaur.html
+++ b/Gen1/Bulbasaur.html
@@ -45,7 +45,7 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>318</td>
+              <td>TOT AL</td>
               <td>45</td>
               <td>49</td>
               <td>49</td>
@@ -56,24 +56,22 @@
           </tbody>
         </table>
         <br />
-        <!-- <table width="100%" border="1">
+        <table width="100%" border="1">
           <thead>
-            <th>PreEvo</th>
-            <th>NextEvo</th>
+            <th>Previous</th>
+            <th>Next</th>
           </thead>
           <tbody align="center">
             <tr>
-              <td>NONE</td>
-              <td>
-                <a href="charmeleon.html">Charmeleon</a><br /><img
-                  src="../img/charmeleon.png"
+              <td>None</td>
+              <td><a href="Ivysaur.html">Ivysaur</a><br /><img
+                  src="../img/ivysaur.png"
                   height="75"
                   width="80"
-                />
-              </td>
+                /></td>
             </tr>
           </tbody>
-        </table> -->
+        </table>
         <br />
         <button id="Gen1" onclick="changeTabs(this.id,'r')">Gen1</button>
       </div>
