--- a/template.html
+++ b/template.html
@@ -45,7 +45,7 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>TOTAL</td>
+              <td>TOT AL</td>
               <td>hp</td>
               <td>ATTACK</td>
               <td>DEFENCE</td>
@@ -56,24 +56,18 @@
           </tbody>
         </table>
         <br />
-        <!-- <table width="100%" border="1">
+        <table width="100%" border="1">
           <thead>
-            <th>PreEvo</th>
-            <th>NextEvo</th>
+            <th>Previous</th>
+            <th>Next</th>
           </thead>
           <tbody align="center">
             <tr>
-              <td>NONE</td>
-              <td>
-                <a href="charmeleon.html">Charmeleon</a><br /><img
-                  src="../img/charmeleon.png"
-                  height="75"
-                  width="80"
-                />
-              </td>
+              PREV
+              NEXT
             </tr>
           </tbody>
-        </table> -->
+        </table>
         <br />
         <button id="GEN" onclick="changeTabs(this.id,'r')">GEN</button>
       </div>
