--- a/Gen1/Ivysaur.html
+++ b/Gen1/Ivysaur.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Bulbasaur
+    Ivysaur
   </title>
 
   <head>
@@ -22,8 +22,8 @@
     <div id="pop-up">
       <div class="popup-cont">
         <div class="bg">
-          <h2>Bulbasaur</h2>
-          <img src="../img/bulbasaur.png" alt="Bulbasaur" width="300" height="250" />
+          <h2>Ivysaur</h2>
+          <img src="../img/ivysaur.png" alt="Ivysaur" width="300" height="250" />
         </div>
         <div class="type">
           <ul>
@@ -45,13 +45,13 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>318</td>
-              <td>45</td>
-              <td>49</td>
-              <td>49</td>
-              <td>45</td>
-              <td>65</td>
-              <td>65</td>
+              <td>405</td>
+              <td>60</td>
+              <td>62</td>
+              <td>63</td>
+              <td>60</td>
+              <td>80</td>
+              <td>80</td>
             </tr>
           </tbody>
         </table>
@@ -63,10 +63,17 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>None</td>
               <td>
-                <a href="Ivysaur.html">Ivysaur</a><br /><img
-                  src="../img/ivysaur.png"
+                <a href="Bulbasaur.html">Bulbasaur</a><br /><img
+                  src="../img/bulbasaur.png"
+                  height="75"
+                  width="80"
+                />
+              </td>
+    
+              <td>
+                <a href="Venusaur.html">Venusaur</a><br /><img
+                  src="../img/venusaur.png"
                   height="75"
                   width="80"
                 />
