--- a/Gen1/Venusaur.html
+++ b/Gen1/Venusaur.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Bulbasaur
+    Venusaur
   </title>
 
   <head>
@@ -22,8 +22,8 @@
     <div id="pop-up">
       <div class="popup-cont">
         <div class="bg">
-          <h2>Bulbasaur</h2>
-          <img src="../img/bulbasaur.png" alt="Bulbasaur" width="300" height="250" />
+          <h2>Venusaur</h2>
+          <img src="../img/venusaur.png" alt="Venusaur" width="300" height="250" />
         </div>
         <div class="type">
           <ul>
@@ -45,13 +45,13 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>318</td>
-              <td>45</td>
-              <td>49</td>
-              <td>49</td>
-              <td>45</td>
-              <td>65</td>
-              <td>65</td>
+              <td>525</td>
+              <td>80</td>
+              <td>82</td>
+              <td>83</td>
+              <td>80</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
         </table>
@@ -63,10 +63,17 @@
           </thead>
           <tbody align="center">
             <tr>
-              <td>None</td>
               <td>
                 <a href="Ivysaur.html">Ivysaur</a><br /><img
                   src="../img/ivysaur.png"
+                  height="75"
+                  width="80"
+                />
+              </td>
+    
+              <td>
+                <a href="Charmander.html">Charmander</a><br /><img
+                  src="../img/charmander.png"
                   height="75"
                   width="80"
                 />
